--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -13,6 +13,7 @@ $register-input: (mobile: 1rem, tablet: 1.17rem);
 $margin-phone: (body: 25px, presentation: 35px, footer: 45px);
 $margin-small-devices: 40px;
 $margin-tablet: (body: 55px, presentation: 77px, footer: 63px);
+$margin-small-desktop: (body: 77px);
 
 /* Colors */
 $main-color: hsl(243, 87%, 12%);
