--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -9,12 +9,18 @@ header {
     }
     @include tablets {
         margin: map-get($map: $margin-tablet, $key: body);
-    } 
+    }
+    @include small-desktops {
+        margin: map-get($map: $margin-small-desktop, $key: body);
+    }
     & #logo {
         & img {
             width: 80px;
             @include tablets {
                 width: 110px;
+            }
+            @include small-desktops {
+                width: 150px;
             }
         }
     }
@@ -31,9 +37,18 @@ nav {
         @include tablets {
             font-size: 1.4rem;
         }
+        @include small-desktops {
+            font-size: 1.6rem;
+        }
         & li {
             margin-left: 25px;
             cursor: pointer;
+            @include tablets {
+                margin-left: 45px;
+            }
+            @include small-desktops {
+                margin-left: 60px;
+            }
         }
     }
 }
